src/diete.css
:root {
	--colors-top: #ffffff;
	--colors-ultra-high: #ffffff;
	--colors-high: #bfc9d9;
	--colors-high-accent: #ebff00;
	--colors-low: #4d5f80;
	--colors-ultra-low: #2d384b;
	--colors-base: #fefefe;

	--colors-dark-overlay: rgba(25, 25, 25, 0.7);
	--colors-light-overlay: rgba(254, 254, 254, 0.7);

	--font-family-sans-serif: 'Space Grotesk';
	--font-family-snaha: 'Snaha';
	--font-family-serif: serif;
	--font-family-monospace: monospace;

	--font-size-large: 1.5rem;
	--font-size: 1rem;
	--font-size-small: 0.75rem;

	--line-height-large: 2rem;
	--line-height: 1.5rem;
	--line-height-small: 1rem;

	--letter-spacing-large: 0.03rem;
	--letter-spacing: 0.02rem;
	--letter-spacing-small: 0.0375rem;

	--font-size-h1: 3rem;
	--font-size-h2: 2.5rem;
	--font-size-h3: 2rem;
	--font-size-h4: 1.5rem;
	--font-size-h5: 1rem;
	--font-size-h6: 0.75rem;

	--font-weight-h1: 700;
	--font-weight-h2: 700;
	--font-weight-h3: 700;
	--font-weight-h4: 700;
	--font-weight-h5: 700;
	--font-weight-h6: 700;

	--line-height-h1: 3.5rem;
	--line-height-h2: 3rem;
	--line-height-h3: 2.5rem;
	--line-height-h4: 2rem;
	--line-height-h5: 1.5rem;
	--line-height-h6: 1rem;

	--letter-spacing-h4: 0.03rem;
	--letter-spacing-h5: 0.02rem;
	--letter-spacing-h6: 0.0375rem;

	--padding: var(--font-size);
	--quarter-padding: calc(var(--padding) / 4);
	--half-padding: calc(var(--padding) / 2);
	--three-quarters-padding: calc(var(--quarter-padding) * 3);
	--one-and-a-half-padding: calc(var(--half-padding) * 3);
	--double-padding: calc(2 * var(--padding));
	--border-radius: 0;
	--focus-outline: 4px solid var(--colors-top);
	--focus-outline-offset: -4px;
}
*,
*::before,
*::after {
	box-sizing: border-box;
}

